# fractal_studio

./: .gitignore  LICENSE  Makefile  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/adapters/: cuda_probe.cpp  legacy_3d_family_adapter.cpp  legacy_hidden_structure_adapter.cpp  legacy_map_adapter.cpp  legacy_newton_adapter.cpp  legacy_stl_adapter.cpp  legacy_transition_adapter.cpp  legacy_variant_adapter.cpp  openmp_probe.cpp
backend/src/api/: routes_artifacts.cpp  routes_benchmark.cpp  routes_common.hpp  routes_ln.cpp  routes_map.cpp  routes_mesh.cpp  routes_modules.cpp  routes_points.cpp  routes_runs.cpp  routes_variants.cpp  routes_video.cpp
backend/src/compute/: colormap.hpp  complex.hpp  cpu_features.cpp  cpu_features.hpp  engine_select.cpp  engine_select.hpp  escape_time.hpp  fx64_raw.hpp  image_io.cpp  image_io.hpp  ln_map.cpp  ln_map.hpp  ln_map_avx2.cpp  ln_map_avx512.cpp  map_kernel.cpp  map_kernel.hpp  map_kernel_avx2.cpp  map_kernel_avx2.hpp  map_kernel_avx512.cpp  map_kernel_avx512.hpp  marching_cubes.cpp  marching_cubes.hpp  mesh.hpp  mesh_io.cpp  mesh_io.hpp  parallel.hpp  scalar.hpp  special_points.cpp  special_points.hpp  tile_scheduler.cpp  tile_scheduler.hpp  transition_kernel.cpp  transition_kernel.hpp  transition_volume.cpp  transition_volume.hpp  transition_volume_avx2.cpp  transition_volume_avx2.hpp  variants.hpp
backend/src/compute/cuda/: fx64.cuh  ln_map.cu  ln_map.cuh  map_kernel.cu  map_kernel.cuh  transition_volume.cu  transition_volume.cuh  video_warp.cu  video_warp.cuh
backend/src/compute/hs/: heightfield_mesh.cpp  heightfield_mesh.hpp
backend/src/compute/newton/: mandelbrot_sp.cpp  mandelbrot_sp.hpp
backend/src/compute/scalar/: fx64.hpp
backend/src/core/: db.cpp  hardware_probe.cpp  http_server.cpp  job_runner.cpp  path_guard.cpp  resource_manager.cpp
backend/src/include/: adapters.hpp  db.hpp  hardware_probe.hpp  http_server.hpp  job_runner.hpp  path_guard.hpp  report.hpp  resource_manager.hpp  routes.hpp  system_checks.hpp  types.hpp
backend/src/report/: conclusion_builder.cpp
backend/src/tests/: special_points_smoke.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  i18n.ts  main.ts  router.ts  theme.ts  types.ts
frontend/src/assets/: base.css  tokens.css
frontend/src/components/: ConclusionCards.vue  FormulaPanel.vue  GalleryGrid.vue  HardwarePanel.vue  JobStatusPanel.vue  LanguageToggle.vue  MapCanvas.vue  NavRail.vue  ParamEditor.vue  RunConfigForm.vue  SpecialPointList.vue  StatusRail.vue  ThreeDViewer.vue
frontend/src/views/: ArtifactsView.vue  AtlasView.vue  ConclusionsView.vue  DashboardView.vue  ExplorerMapView.vue  HiddenStructureView.vue  MapView.vue  PointsView.vue  RunsView.vue  SpecialPointsView.vue  StlGalleryView.vue  SystemView.vue  ThreeDFamilyView.vue  ThreeDView.vue  TransitionConversionView.vue
runtime/: special_points_auto_10d08826087af15aec987b6967f40dbd.py  special_points_auto_1918055966ecdff489979d083b5e04a.json  special_points_auto_1918055966ecdff489979d083b5e04a.py  special_points_auto_a58374b7e8ae07f9e6ca49c126dc143f.json  special_points_auto_a58374b7e8ae07f9e6ca49c126dc143f.py
runtime/db/: fractal_studio.sqlite3
runtime/managed_sources/: Mandelbrot_python.c  Mandelbrot_python_ln.c  Mandelbrot_python_ln_managed.out  Mandelbrot_python_managed.out  map_renderer_openmp.c  map_renderer_openmp.out
scripts/: check_legacy_immutable.sh  check_system_requirements.sh
